sua phan templates

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html>
-<head><title>Flask App</title></head>
+<head><title>Flask App Python</title></head>
 <body>
     <h1>Hello Flask!</h1>
 </body>
